feat: optimize Bazaar item ID and fallback resolution #183 perf(data): migrate to fastutil maps and enforce immutability chore(data): constants updated